all draws and gets working

--- a/app/views/HousesView.html
+++ b/app/views/HousesView.html
@@ -1,1 +1,39 @@
-<h1>BUY HOUSES YOU DUMB MILLENNIALS</h1>
+<section id="house-form" class="row d-none p-3">
+    <form action="submit" onsubmit="app.HouseController.createHouses()">
+        <div>
+            <label class="form-label" for="house-bedrooms">Bedroom Qty</label>
+            <input type="text" name="bedrooms" id="house-bedrooms" class="form-control">
+        </div>
+        <div>
+            <label class="form-label" for="house-bathroom">Bathroom Qty</label>
+            <input type="text" name="bathroom" id="house-bathroom" class="form-control">
+        </div>
+        <div>
+            <label class="form-label" for="house-levels">Levels Qty</label>
+            <input type="text" name="levels" id="house-levels" class="form-control">
+        </div>
+        <div>
+            <label class="form-label" for="house-price">Price</label>
+            <input type="text" name="price" id="house-price" class="form-control">
+        </div>
+        <div>
+            <label class="form-label" for="house-year">Year</label>
+            <input type="text" name="year" id="house-year" class="form-control">
+        </div>
+        <div>
+            <label class="form-label" for="house-description">House Description</label>
+            <input type="textarea" name="description" id="house-description" class="form-control">
+        </div>
+        <div>
+            <label class="form-label" for="house-img">Image URL</label>
+            <input type="url" name="imgUrl" id="house-img" class="form-control">
+        </div>
+        <div>
+            <button type="submit" class="btn btn-success">Submit</button>
+        </div>
+    </form>
+</section>
+
+<section id="house-display" class="row">
+
+</section>
