--- a/app/views/HousesView.html
+++ b/app/views/HousesView.html
@@ -1,12 +1,12 @@
 <section id="house-form" class="row d-none p-3">
-    <form action="submit" onsubmit="app.HouseController.createHouses()">
+    <form action="submit" onsubmit="app.HousesController.createHouses()">
         <div>
             <label class="form-label" for="house-bedrooms">Bedroom Qty</label>
             <input type="text" name="bedrooms" id="house-bedrooms" class="form-control">
         </div>
         <div>
             <label class="form-label" for="house-bathroom">Bathroom Qty</label>
-            <input type="text" name="bathroom" id="house-bathroom" class="form-control">
+            <input type="text" name="bathrooms" id="house-bathroom" class="form-control">
         </div>
         <div>
             <label class="form-label" for="house-levels">Levels Qty</label>
