--- a/app/views/HousesView.html
+++ b/app/views/HousesView.html
@@ -1,4 +1,5 @@
 <section id="house-form" class="row d-none p-3">
+    <h2>Sell us your house! No fees, no guarantees!</h2>
     <form action="submit" onsubmit="app.HousesController.createHouses()">
         <div>
             <label class="form-label" for="house-bedrooms">Bedroom Qty</label>
