--- a/app/views/JobsView.html
+++ b/app/views/JobsView.html
@@ -1,4 +1,5 @@
 <section id="job-form" class="row d-none p-3">
+    <h2>Get a job here. Pay not included.</h2>
     <form onsubmit="app.JobsController.createJobs()">
         <label class="form-label" for="job-title">Job Title</label>
         <input type="text" name="jobTitle" id="job-title" class="form-control">
